fix z-indexe problem

--- a/src/features/home/DefaultPage.less
+++ b/src/features/home/DefaultPage.less
@@ -61,6 +61,9 @@
         }
       }
     }
+    .ant-tabs-ink-bar {
+      z-index: 0;
+    }
   }
 
   ul,
